# 3D-Gaussian-Splatting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: Gaussian.slang  TestShader.slang
include/: pch.h
include/3dgs/: Common.h  CommonDefines.h  InputManager.h  Renderer.h  Scene.h  Window.h
include/3dgs/graphics/: Buffer.h  CommandBuffer.h  CommandPool.h  ConstantBuffer.h  Descriptor.h  DescriptorPool.h  DescriptorSet.h  Device.h  Device.hpp  FrameResource.h  GaussianRenderScene.h  GpuResource.h  IRenderScene.h  IRenderScene.hpp  IRenderable.h  Instance.h  PhysicalDevice.h  PhysicalDevice.hpp  Pipeline.h  Queue.h  Renderer.h  Shader.h  ShaderManager.h  StagingBuffer.h  SwapChain.h  Texture.h  VertexBuffer.h
include/3dgs/math/: Matrix.h  Matrix.hpp  Vector.h
include/3dgs/scene/: Camera.h  DataTypes.h  Gaussian.h  Scene.h
src/: Buffer.cpp  Camera.cpp  CommandBuffer.cpp  CommandPool.cpp  ConstantBuffer.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  FrameResource.cpp  Gaussian.cpp  GaussianRenderScene.cpp  IRenderScene.cpp  IRenderable.cpp  InputManager.cpp  Instance.cpp  PhysicalDevice.cpp  Pipeline.cpp  Queue.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShaderManager.cpp  SwapChain.cpp  Texture.cpp  Window.cpp  main.cpp
